Add before filters for user authorization on edit and update.

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,4 +3,9 @@ steve:
   email: steve@example.com
   password_digest: <%= User.digest('password') %>
 
+arthur:
+  name: Arther Boia
+  email: arthur@me.com
+  password_digest: <%= User.digest('password') %>
+
 
